fixed style bugs on small landscape screen, about page

--- a/src/pages/about/About.module.scss
+++ b/src/pages/about/About.module.scss
@@ -142,21 +142,55 @@
       }
     }  
   } 
+
+  @media screen and (max-height: 600px){
+    .aboutContainer {
+      .aboutSubContainer {
+        flex-direction: row-reverse;
+        align-items: start;
+        justify-content: space-between;
+        top: 30%;
+        right: unset;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 25vh;
+        width: 90vw;
+        padding: 5px;
+      }
+      .aboutInfoContainer {
+        .aboutInfoText {
+          height: 24vh;
+          overflow: scroll;
+        }
+      }
+    } 
+  }
   
   @media screen and (max-height: 430px) {
     .aboutContainer {
-      .aboutInfoContainer {
-        width: 50vw !important;
-        padding: 5px !important;
-  
-        br {
-          display: none;
-        }
-        .aboutInfoText {
-          height: 100%;
-          margin-bottom: 5px;
-          overflow: scroll;
-          padding: .5rem;
+      .aboutSubContainer {
+        .aboutInfoContainer {
+          width: 45vw;
+          height: 28vh;
+          padding: 5px;
+          margin-right: 5vw;
+    
+          br {
+            display: none;
+          }
+               
+          h5 {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+          }
+          p {
+            font-size: .8rem;
+          }
+
+          .aboutInfoText {
+            height: 24vh;
+            padding: .5rem;
+          }
         }
       }
     }  
